@@ -1,0 +1,39 @@
+name    = HTML-FormFu-Model-DBIC
+author  = Carl Franks <cpan@fireartist.com>
+license = Perl_5
+copyright_holder = Carl Franks
+copyright_year   = 2013
+
+version = 1.00
+
+[Prereqs]
+perl = 5.008001
+DBD::SQLite = 0
+DBIx::Class = 0.08108
+HTML::FormFu = 1.00
+List::MoreUtils = 0
+Storable = 0
+Task::Weaken = 0 ; make sure Scalar::Util has weaken()
+
+[Prereqs / TestRequires]
+DateTime::Format::SQLite = 0
+Locale::Maketext = 0
+SQL::Translator = 0 ; for $schema->deploy()
+Test::More = 0.99
+
+[Prereqs / DevelopRequires]
+Test::Pod = 0
+
+[PodCoverageTests]
+[PodSyntaxTests]
+
+[PkgVersion]
+
+[NextRelease]
+format = %v %{yyyy-MM-dd}d
+
+[Repository]
+
+[@Git]
+
+[@Basic]
